@@ -1,3 +1,9 @@
+2007-02-14  Miloslav Trmac  <mitr@redhat.com>
+
+	* makeinfo/makeinfo.c (getdocumenttext): Correctly save and
+	restore the current locale configuration.
+	bug-texinfo mail of 14 Feb 2007 16:28:37 +0100.
+
 2007-02-11  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (HTML Xref Link Basics): manual is metasyntactic.
